fix: fix overflowing profile picture

--- a/ChildrenDaycare/wwwroot/css/styles.css
+++ b/ChildrenDaycare/wwwroot/css/styles.css
@@ -9,6 +9,22 @@
   background-color: white;
 }
 
+.avatar-container {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 2px solid #ccc;
+  overflow: hidden;
+  position: relative;
+  cursor: pointer;
+}
+
+#avatar-preview {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensure the image covers the entire container */
+}
+
 .profile-pic {
   color: transparent;
   transition: all 0.3s ease;
